Adjust RenderElement size assertion to be more accurate https://bugs.webkit.org/show_bug.cgi?id=179146

Reviewed by Simon Fraser.

* rendering/RenderElement.cpp:
Alignment rules for bitfields differ on different platforms. If we're
more truthful in our mimicing the layout of RenderElement, we can avoid
the assertion firing on more configurations.


Canonical link: https://commits.webkit.org/195257@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224310 268f45cc-cd09-0410-ab3c-d52691b4dbfc